# fastapi-async-template

./: README.md
{{cookiecutter.project_slug}}/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/crud/: base.py
